[project]
name = "ecg-arrhythmia-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "streamlit>=1.52.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]
